--- a/styles.css
+++ b/styles.css
@@ -3,8 +3,8 @@
 
 /* Variables */
 :root {
-    --primary-color: #2ecc71;
-    --secondary-color: #27ae60;
+    --primary-color: #ff7f00;
+    --secondary-color: #e67300;
     --dark-color: #333;
     --text-color: #666;
     --light-color: #f4f4f4;
@@ -210,7 +210,7 @@ nav {
     right: 0;
     width: 50%;
     height: 100%;
-    background-color: rgba(46, 204, 113, 0.05);
+    background-color: rgba(255, 127, 0, 0.05);
     border-radius: 0 0 0 100px;
     z-index: 0;
 }
@@ -241,7 +241,7 @@ nav {
     position: absolute;
     width: 100%;
     height: 8px;
-    background-color: rgba(46, 204, 113, 0.2);
+    background-color: rgba(255, 127, 0, 0.2);
     bottom: 5px;
     left: 0;
     z-index: -1;
@@ -314,7 +314,7 @@ nav {
     position: absolute;
     width: 300px;
     height: 300px;
-    background-color: rgba(46, 204, 113, 0.05);
+    background-color: rgba(255, 127, 0, 0.05);
     border-radius: 50%;
 }
 
