--- a/styles.css
+++ b/styles.css
@@ -120,14 +120,21 @@ nav {
     padding: 20px 0;
 }
 
-.logo a {
-    font-size: 2rem;
-    font-weight: 700;
-    color: var(--dark-color);
+.logo {
+    font-size: 1.2rem;
+    font-weight: 500;
 }
 
-.logo span {
+.developed-by {
+    color: var(--text-color);
+    opacity: 0.7;
+    font-size: 0.9rem;
+    font-style: italic;
+}
+
+.developed-by i {
     color: var(--primary-color);
+    margin: 0 3px;
 }
 
 .nav-links {
