--- a/styles.css
+++ b/styles.css
@@ -329,7 +329,7 @@ nav {
 .company-logo {
     margin-top: 5px;
     max-width: 120px;
-    height: 30px;
+    height: 50px;
     display: flex;
     align-items: center;
 }
@@ -337,6 +337,8 @@ nav {
 .company-logo img {
     max-width: 100%;
     max-height: 100%;
+    object-fit: contain;
+}
     object-fit: contain;
 }
 
