--- a/styles.css
+++ b/styles.css
@@ -328,6 +328,7 @@ nav {
 
 .company-logo {
     margin-top: 5px;
+    margin-bottom: 10px;
     width: 120px;
     height: 50px;
     display: flex;
